compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__integer.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<256:int>>\n}\n"
---
----- SOURCE CODE

fn go() {
  <<256:int>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../rakun.mjs";

function go() {
  return toBitArray([256]);
}
