compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__match_binary_size.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 535
expression: "\nfn go(x) {\n  let assert <<_, a:2-bytes>> = x\n  let assert <<_, b:bytes-size(2)>> = x\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let assert <<_, a:2-bytes>> = x
  let assert <<_, b:bytes-size(2)>> = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../rakun.mjs";

function go(x) {
  if (!(x.length == 3)) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  let a = x.binaryFromSlice(1, 3);
  if (!(x.length == 3)) {
    throw makeError(
      "let_assert",
      "my/mod",
      4,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  let b = x.binaryFromSlice(1, 3);
  return x;
}
